--- a/src/components/charts/charts.module.css
+++ b/src/components/charts/charts.module.css
@@ -1,3 +1,7 @@
+.container .content {
+  margin-bottom: 48px;
+}
+
 .container .content .navigation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -35,5 +39,15 @@
   margin: 24px 0px 0px 130px;
   font-size: 32px;
   color: #1a1a1a;
+}
+
+.container .content h2 {
+  margin: 24px 0px 0px 130px;
+  font-size: 24px;
+  color: #1a1a1a;
+}
+
+.container .content h2:last-child {
+  margin-top: 32px;
 }
 /*# sourceMappingURL=charts.module.css.map */
