--- a/src/components/charts/diagram/diagram.module.css
+++ b/src/components/charts/diagram/diagram.module.css
@@ -1,4 +1,10 @@
 .diagram_container {
   margin: 24px 130px 0px 130px;
 }
+
+@media screen and (max-width: 768px) {
+  .diagram_container {
+    margin: 24px 0px 0px 0px;
+  }
+}
 /*# sourceMappingURL=diagram.module.css.map */
