--- a/src/components/charts/charts.module.css
+++ b/src/components/charts/charts.module.css
@@ -35,6 +35,71 @@
   margin: 0px;
 }
 
+.container .content .selectedDiapazonContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .content .selectedDiapazonContainer .selectors {
+  margin-right: 130px;
+  margin-top: 34px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .content .selectedDiapazonContainer .selectors div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .content .selectedDiapazonContainer .selectors p {
+  margin: 0px;
+  margin-right: 10px;
+}
+
+.container .content .selectedDiapazonContainer .selectors span {
+  display: inline-block;
+  padding: 10px;
+  border: solid 2px #3a80ba;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.container .content .selectedDiapazonContainer .selectors .errorSpan {
+  border: solid 2px #e95870;
+}
+
+.container .content .selectedDiapazonContainer select {
+  margin-right: 20px;
+  border-radius: 8px;
+  border-color: #cccccc;
+  padding: 5px 10px;
+  color: #1a1a1a;
+  outline: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
 .container .content h1 {
   margin: 24px 0px 0px 130px;
   font-size: 32px;
@@ -49,5 +114,55 @@
 
 .container .content h2:last-child {
   margin-top: 32px;
+}
+
+@media screen and (max-width: 768px) {
+  .container .content {
+    padding: 0px 10px;
+  }
+  .container .content .navigation {
+    margin: 16px 0px 0px 0px;
+  }
+  .container .content .navigation a, .container .content .navigation p {
+    font-size: 12px;
+  }
+  .container .content .selectedDiapazonContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .content .selectedDiapazonContainer .selectors {
+    margin-right: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
+  .container .content .selectedDiapazonContainer .selectors span {
+    margin-top: 10px;
+  }
+  .container .content .selectedDiapazonContainer .selectors select {
+    margin: 3px;
+  }
+  .container .content .selectedDiapazonContainer .selectors p {
+    margin: 3px;
+  }
+  .container .content h1 {
+    margin: 24px 0px 0px 0px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  .container .content h2 {
+    margin: 24px 0px 0px 0px;
+  }
 }
 /*# sourceMappingURL=charts.module.css.map */
