--- a/src/components/charts/diagram/diagram.module.scss
+++ b/src/components/charts/diagram/diagram.module.scss
@@ -1,3 +1,9 @@
 .diagram_container {
     margin: 24px 130px 0px 130px;
 }
+
+@media screen and (max-width: 768px) {
+    .diagram_container {
+    margin: 24px 0px 0px 0px;
+    }
+}
