--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -497,4 +497,376 @@
   margin: 0px;
   margin-top: 30px;
 }
+
+@media screen and (max-width: 768px) {
+  .container .header {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .container .header .header_image_container {
+    display: none;
+  }
+  .container .header .header_info_container {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .header .header_info_container .logo {
+    margin-left: 0px;
+  }
+  .container .header h1 {
+    font-size: 40px;
+    width: 328px;
+    margin-left: 0px;
+  }
+  .container .header h1 span {
+    font-weight: 800;
+    font-size: 40px;
+  }
+  .container .header .header_discription {
+    margin-left: 0px;
+    width: 328px;
+  }
+  .container .header .header_button {
+    margin-left: 0px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .container .advantage_container .advantage_header h2 {
+    width: 328px;
+  }
+  .container .advantage_container .advantage_header p {
+    width: 328px;
+  }
+  .container .advantage_container .advantage_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .advantage_container .advantage_content div {
+    width: 328px;
+    margin: 20px 10px;
+  }
+  .container .start_app_container {
+    margin-top: 20px;
+  }
+  .container .start_app_container .start_app_info {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container .start_app_container .start_app_info h3 {
+    margin: 20px 0px 0px 0px;
+    width: 328px;
+  }
+  .container .start_app_container .start_app_info p {
+    margin: 16px 0px 0px 0px;
+    width: 328px;
+  }
+  .container .start_app_container .start_app_info .start_app_button {
+    margin-left: 0px;
+    margin-bottom: 20px;
+  }
+  .container .start_app_container img {
+    display: none;
+  }
+  .container .pricing_container .pricing_header h3 {
+    margin: 80px 0px 0px 0px;
+    width: 328px;
+  }
+  .container .pricing_container .pricing_header p {
+    margin: 24px 0px 0px 0px;
+    width: 328px;
+  }
+  .container .pricing_container .pricing_content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .pricing_container .pricing_content div {
+    width: 328px;
+  }
+  .container .pricing_container .pricing_content div h3 {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .price_foto {
+    margin: 19px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .pricing_price {
+    margin: 16px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .line {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .price_discription {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .price_button {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 328px;
+    margin: 32px 0px 0px 0px;
+  }
+  .container .footer_container {
+    margin: 48px 0px 0px 0px;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+  }
+  .container .footer_container .footer_input {
+    margin: 26px 0px 0px 0px;
+    width: 328px;
+  }
+  .container .footer_container .footer_info_container {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container .footer_container .footer_info_container p {
+    margin: 0px;
+    margin-top: 20px;
+  }
+  .container .footer_container .footer_info_container p:last-child {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .container .header {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .container .header .header_image_container {
+    display: none;
+  }
+  .container .header .header_info_container {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .header .header_info_container .logo {
+    margin-left: 0px;
+  }
+  .container .header h1 {
+    font-size: 40px;
+    width: 500px;
+    margin-left: 0px;
+  }
+  .container .header h1 span {
+    font-weight: 800;
+    font-size: 40px;
+  }
+  .container .header .header_discription {
+    margin-left: 0px;
+    width: 500px;
+  }
+  .container .header .header_button {
+    margin-left: 0px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .container .advantage_container .advantage_header h2 {
+    width: 500px;
+  }
+  .container .advantage_container .advantage_header p {
+    width: 500px;
+  }
+  .container .advantage_container .advantage_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .advantage_container .advantage_content div {
+    width: 500px;
+    margin: 20px 10px;
+  }
+  .container .start_app_container {
+    margin-top: 20px;
+  }
+  .container .start_app_container .start_app_info {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container .start_app_container .start_app_info h3 {
+    margin: 20px 0px 0px 0px;
+    width: 500px;
+  }
+  .container .start_app_container .start_app_info p {
+    margin: 16px 0px 0px 0px;
+    width: 500px;
+  }
+  .container .start_app_container .start_app_info .start_app_button {
+    margin-left: 0px;
+    margin-bottom: 20px;
+  }
+  .container .start_app_container img {
+    display: none;
+  }
+  .container .pricing_container .pricing_header h3 {
+    margin: 80px 0px 0px 0px;
+    width: 500px;
+  }
+  .container .pricing_container .pricing_header p {
+    margin: 24px 0px 0px 0px;
+    width: 500px;
+  }
+  .container .pricing_container .pricing_content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container .pricing_container .pricing_content div {
+    width: 500px;
+  }
+  .container .pricing_container .pricing_content div h3 {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .price_foto {
+    margin: 19px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .pricing_price {
+    margin: 16px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .line {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .price_discription {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_content div .price_button {
+    margin: 24px 0px 0px 0px;
+  }
+  .container .pricing_container .pricing_contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 500px;
+    margin: 32px 0px 0px 0px;
+  }
+  .container .footer_container {
+    margin: 48px 0px 0px 0px;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+  }
+  .container .footer_container .footer_input {
+    margin: 26px 0px 0px 0px;
+    width: 500px;
+  }
+  .container .footer_container .footer_info_container {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container .footer_container .footer_info_container p {
+    margin: 0px;
+    margin-top: 20px;
+  }
+  .container .footer_container .footer_info_container p:last-child {
+    margin-bottom: 20px;
+  }
+}
 /*# sourceMappingURL=main.module.css.map */
