--- a/src/components/main/main.module.scss
+++ b/src/components/main/main.module.scss
@@ -1,5 +1,6 @@
 $white: #ffffff;
-
+@media screen and (min-width: 1240px) {
+}
 .container {
   .button {
     display: flex;
@@ -288,10 +289,9 @@ $white: #ffffff;
         background: none;
       }
       input:focus {
-
         outline: none;
       }
-      input::placeholder  {
+      input::placeholder {
         font-size: 16px;
         line-height: 162%;
         color: #b9b9b9;
@@ -320,6 +320,316 @@ $white: #ffffff;
         width: 300px;
         margin: 0px;
         margin-top: 30px;
+      }
+    }
+  }
+}
+
+$mobileScreen: 768px;
+$widthPadding: 328px;
+
+@media screen and (max-width: 768px) {
+  .container {
+    .header {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      .header_image_container {
+        display: none;
+      }
+      .header_info_container {
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        .logo {
+          margin-left: 0px;
+        }
+      }
+      h1 {
+        font-size: 40px;
+        width: $widthPadding;
+        margin-left: 0px;
+        span {
+          font-weight: 800;
+          font-size: 40px;
+        }
+      }
+      .header_discription {
+        margin-left: 0px;
+        width: $widthPadding;
+      }
+      .header_button {
+        margin-left: 0px;
+        align-self: center;
+      }
+    }
+    .advantage_container {
+      .advantage_header {
+        h2 {
+          width: $widthPadding;
+        }
+        p {
+          width: $widthPadding;
+        }
+      }
+      .advantage_content {
+        flex-direction: column;
+
+        div {
+          width: $widthPadding;
+          margin: 20px 10px;
+        }
+      }
+    }
+    .start_app_container {
+      margin-top: 20px;
+      .start_app_info {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h3 {
+          margin: 20px 0px 0px 0px;
+          width: $widthPadding;
+        }
+        p {
+          margin: 16px 0px 0px 0px;
+          width: $widthPadding;
+        }
+        .start_app_button {
+          margin-left: 0px;
+          margin-bottom: 20px;
+        }
+      }
+      img {
+        display: none;
+      }
+    }
+    .pricing_container {
+      .pricing_header {
+        h3 {
+          margin: 80px 0px 0px 0px;
+          width: $widthPadding;
+        }
+        p {
+          margin: 24px 0px 0px 0px;
+          width: $widthPadding;
+        }
+      }
+      .pricing_content {
+        display: flex;
+        flex-direction: column;
+        div {
+          width: $widthPadding;
+          h3 {
+            margin: 24px 0px 0px 0px;
+          }
+          .price_foto {
+            margin: 19px 0px 0px 0px;
+          }
+          .pricing_price {
+            margin: 16px 0px 0px 0px;
+          }
+          .line {
+            margin: 24px 0px 0px 0px;
+          }
+          .price_discription {
+            margin: 24px 0px 0px 0px;
+          }
+          .price_button {
+            margin: 24px 0px 0px 0px;
+          }
+        }
+      }
+      .pricing_contact {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        width: $widthPadding;
+        margin: 32px 0px 0px 0px;
+      }
+    }
+    .footer_container {
+      margin: 48px 0px 0px 0px;
+      height: max-content;
+      .footer_input {
+        margin: 26px 0px 0px 0px;
+        width: $widthPadding;
+      }
+      .footer_info_container {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+
+        p {
+          margin: 0px;
+          margin-top: 20px;
+        }
+        p:last-child {
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+}
+
+$tabletScreen: 768px;
+$widthPaddingTablet: 500px;
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .container {
+    .header {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      .header_image_container {
+        display: none;
+      }
+      .header_info_container {
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        .logo {
+          margin-left: 0px;
+        }
+      }
+      h1 {
+        font-size: 40px;
+        width: $widthPaddingTablet;
+        margin-left: 0px;
+        span {
+          font-weight: 800;
+          font-size: 40px;
+        }
+      }
+      .header_discription {
+        margin-left: 0px;
+        width: $widthPaddingTablet;
+      }
+      .header_button {
+        margin-left: 0px;
+        align-self: center;
+      }
+    }
+    .advantage_container {
+      .advantage_header {
+        h2 {
+          width: $widthPaddingTablet;
+        }
+        p {
+          width: $widthPaddingTablet;
+        }
+      }
+      .advantage_content {
+        flex-direction: column;
+
+        div {
+          width: $widthPaddingTablet;
+          margin: 20px 10px;
+        }
+      }
+    }
+    .start_app_container {
+      margin-top: 20px;
+      .start_app_info {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h3 {
+          margin: 20px 0px 0px 0px;
+          width: $widthPaddingTablet;
+        }
+        p {
+          margin: 16px 0px 0px 0px;
+          width: $widthPaddingTablet;
+        }
+        .start_app_button {
+          margin-left: 0px;
+          margin-bottom: 20px;
+        }
+      }
+      img {
+        display: none;
+      }
+    }
+    .pricing_container {
+      .pricing_header {
+        h3 {
+          margin: 80px 0px 0px 0px;
+          width: $widthPaddingTablet;
+        }
+        p {
+          margin: 24px 0px 0px 0px;
+          width: $widthPaddingTablet;
+        }
+      }
+      .pricing_content {
+        display: flex;
+        flex-direction: column;
+        div {
+          width: $widthPaddingTablet;
+          h3 {
+            margin: 24px 0px 0px 0px;
+          }
+          .price_foto {
+            margin: 19px 0px 0px 0px;
+          }
+          .pricing_price {
+            margin: 16px 0px 0px 0px;
+          }
+          .line {
+            margin: 24px 0px 0px 0px;
+          }
+          .price_discription {
+            margin: 24px 0px 0px 0px;
+          }
+          .price_button {
+            margin: 24px 0px 0px 0px;
+          }
+        }
+      }
+      .pricing_contact {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        width: $widthPaddingTablet;
+        margin: 32px 0px 0px 0px;
+      }
+    }
+    .footer_container {
+      margin: 48px 0px 0px 0px;
+      height: max-content;
+      .footer_input {
+        margin: 26px 0px 0px 0px;
+        width: $widthPaddingTablet;
+      }
+      .footer_info_container {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+
+        p {
+          margin: 0px;
+          margin-top: 20px;
+        }
+        p:last-child {
+          margin-bottom: 20px;
+        }
       }
     }
   }
